[package]
name = "rt-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
num-integer = "0.1"
image = "0.24"
itertools = "0.10.4"
approx = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"